Test and Fix buildings controller errors
